# wayland-utils

./: README.md  meson.build  releasing.md
debian/: changelog  control  rules  watch
debian/upstream/: metadata
man/: meson.build  wayland-info.man
wayland-info/: wayland-info.c
